[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Orb.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/FrontArm.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Real Grav Boy Sprites/Front Arm.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Real Grav Boy Sprites/Gravity Boy Run 1 without arms.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Real Grav Boy Sprites/Gravity Boy Run 3 without arms.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Real Grav Boy Sprites/Gravity Boy Stand  Without Arms.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Real Grav Boy Sprites/weapon.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 60.0
height = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.5, 6 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "move",
"speed": 7.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[node name="Player" type="RigidBody2D" groups=["pullable"]]
mode = 2
mass = 0.510204
physics_material_override = SubResource( 2 )
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
multiplier = 6
orb = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 61 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 4 )
animation = "jump"

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.5

[node name="FrontArm" type="Sprite" parent="."]
scale = Vector2( 0.855469, 0.882813 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Weapon" type="Sprite" parent="FrontArm"]
texture = ExtResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
